# wrapdb

./: releases.json
subprojects/: argparse_c.wrap
subprojects/packagefiles/argparse_c/: meson.build
subprojects/packagefiles/stduuid/: meson.build
